objects/ESC_Case_Collaborator__c.object
<CustomObject>
    <description>ESC_ Custom object to enable the Accountable Resolver, Case Collaborator, and Escalation processes in Enterprise Service Cloud program</description>
    <fields>
        <fullName>CreatedDate_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_AccountName__c</fullName>
        <description>ESC_ This field Copies Account from the related case</description>
        <formula>ESC_Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Action__c</fullName>
        <formula>HYPERLINK(&quot;/flow/ESC_Home_Page_Owner_Change?CaseId=&quot;+Id+&quot;&amp;retURL=/lightning/r/Case/&quot;+ESC_Case__c+&quot;/view&quot;, &quot;Accept&quot;,&quot;_Self&quot;)</formula>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Age_Indicator__c</fullName>
        <description>ESC_ This is the RTI icon for the case that is represented in the referral.</description>
        <formula>ESC_Case__r.ESC_CaseAge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of Jira:EES-222</description>
        <label>Assign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ESC_Referrals_Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_Business_Critical_Image__c</fullName>
        <formula>ESC_Case__r.ESC_Business_Critical_Image__c</formula>
        <label>BC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_CaseNumber__c</fullName>
        <description>ESC_ This field is the Case Number of the case referenced</description>
        <formula>ESC_Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_CaseSubject__c</fullName>
        <formula>ESC_Case__r.ESC_Case__c</formula>
        <label>Case#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Contact__c</fullName>
        <formula>ESC_Case__r.Contact.ESC_Full_Name__c</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Description__c</fullName>
        <description>ESC_ This field Copies the description from the related case</description>
        <label>Case Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Status__c</fullName>
        <formula>TEXT(ESC_Case__r.Status)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ESC_ The related case to the referral</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Referrals/Escalations</relationshipLabel>
        <relationshipName>Case_Collaborations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_Comments__c</fullName>
        <description>ESC_ Comments related to the referral</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Date_Opened__c</fullName>
        <description>ESC_ This field is the date and time field from the related case object</description>
        <formula>ESC_Case__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_EPX_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by EPs Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_End_Date__c</fullName>
        <description>ESC_ End date of the referral for reporting purposes</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Escalation_Resolution__c</fullName>
        <description>This field has Notes around how the escalation was resolved</description>
        <label>Escalation Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Executive_Summary__c</fullName>
        <description>ESC_ Upstream facing remarks</description>
        <label>Executive Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Form_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Id</label>
        <referenceTo>GenerateForm__c</referenceTo>
        <relationshipLabel>Referrals/Escalations</relationshipLabel>
        <relationshipName>Referrals_Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_Form_Name__c</fullName>
        <label>Form Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_GSLA_Case__c</fullName>
        <description>ESC_ Will be addressed in ESC Phase 2</description>
        <formula>ESC_Case__r.ESC_GSLA_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Case GSLA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_LastQueueOwner__c</fullName>
        <description>ESC_ The ID of the last queue that maintained ownership of the queue in case udpates are received after the user is in active.</description>
        <label>Last Queue Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Number_of_Escalations__c</fullName>
        <label>Number of Escalations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Open_Escalations__c</fullName>
        <formula>ESC_Case__r.ESC_Open_Escalations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Escalations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Priority__c</fullName>
        <description>ESC_ The Priority field from the related case</description>
        <formula>TEXT(ESC_Case__r.Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Severity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Product_Feature_Module__c</fullName>
        <formula>TEXT(ESC_Case__r.ESC_Product_Feature_Module__c)</formula>
        <label>Product Feature Module</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Product__c</fullName>
        <formula>TEXT(ESC_Case__r.ESC_Product_Title__c)</formula>
        <label>Product Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Queue_Type__c</fullName>
        <description>ESC_ Will be addressed in ESC phase 2</description>
        <label>Queue Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_REFType__c</fullName>
        <description>ESC_ Type of assistance needed to close or move the issue forward</description>
        <label>Escalation Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_Role__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sale Protection</fullName>
                </value>
                <value>
                    <fullName>Upgrade Protection</fullName>
                </value>
                <value>
                    <fullName>Customer Relationship Protection</fullName>
                </value>
                <value>
                    <fullName>Threat of Competition</fullName>
                </value>
                <value>
                    <fullName>To Avoid Penalty</fullName>
                </value>
                <value>
                    <fullName>Other - Enter details in comment field</fullName>
                </value>
                <value>
                    <fullName>Failed Handover</fullName>
                </value>
                <value>
                    <fullName>Missing Update</fullName>
                </value>
                <value>
                    <fullName>EPs Scoring</fullName>
                </value>
                <value>
                    <fullName>MCX Scoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Rec_Type_Short_Name__c</fullName>
        <formula>IF((RecordType.DeveloperName = &quot;ESC_Service_Cloud_Referral&quot;),&quot;REF&quot;, IF((RecordType.DeveloperName  = &quot;Escalations&quot;),&quot;ESC&quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rec Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_ReferralUPD__c</fullName>
        <defaultValue>true</defaultValue>
        <description>ESC_ This flag controls if the UPD flag is available on the referral object.</description>
        <label>UPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Referral_Age__c</fullName>
        <description>ESC_ The age of the referral as calculated from open to NOW().</description>
        <formula>IF (
    OR(
        ISPICKVAL(ESC_Referral_Status__c, &quot;Closed&quot;),
        ISPICKVAL(ESC_Referral_Status__c, &quot;Rejected&quot;),
        ISPICKVAL(ESC_Referral_Status__c, &quot;Completed&quot;) 
       ),
    (DATETIMEVALUE (ESC_End_Date__c) - DATETIMEVALUE (CreatedDate )),(NOW()  - DATETIMEVALUE ( CreatedDate )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Referral_Stage__c</fullName>
        <formula>TEXT(ESC_Case__r.ESC_Referral_Stage__c)</formula>
        <label>Referral Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Referral_Status__c</fullName>
        <description>ESC_ The current status of the referral. Rejected and Closed are the equivalent of the ISCLOSED statuses on referrals</description>
        <label>Referral Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_Role__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Customer Hold</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending Change</fullName>
                </value>
                <value>
                    <fullName>Pending Customer</fullName>
                </value>
                <value>
                    <fullName>Pending Other</fullName>
                </value>
                <value>
                    <fullName>Pending Vendor</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Work In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Referral_age_excl_cust_hold__c</fullName>
        <description>ESC_ Referral age MINUS Customer Hold time.</description>
        <formula>ESC_Referral_Age__c  -   ESC_Case__r.ESC_CustomerHoldTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral age excl Cust Hold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Rejection_Cancellation_Reason__c</fullName>
        <description>ESC_ If rejected, this field is required for the reason for the rejection.</description>
        <label>Rejection / Cancellation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Response_Time__c</fullName>
        <formula>ESC_Case__r.ESC_Response_Time__c</formula>
        <label>Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Response_time_difference__c</fullName>
        <description>ESC_ Will be addressed in Phase 2 of ESC program - Used for GSLACaseDispatch scheduler</description>
        <formula>( NOW() - CreatedDate )*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response time difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Role__c</fullName>
        <description>ESC_ Maintains the role of the referral function - Accountable Resolver, Collaborator, manager Escalation</description>
        <label>Referral Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountable Resolver</fullName>
                    <default>true</default>
                    <label>Accountable Resolver</label>
                </value>
                <value>
                    <fullName>Collaborator</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Severity__c</fullName>
        <description>ESC_ The Severity field from the related case</description>
        <formula>TEXT( ESC_Case__r.ESC_Severity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Severity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Subject__c</fullName>
        <description>ESC_ The subject field from the related case</description>
        <formula>ESC_Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Team1__c</fullName>
        <description>ESC_ Will be addressed in ESC phase 2</description>
        <label>Team (Static)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Team__c</fullName>
        <description>ESC_ The role of the related owner of the case from the related case</description>
        <label>Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Total_Escalations__c</fullName>
        <formula>ESC_Case__r.ESC_Total_Escalations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Escalations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_UPD_Resolver__c</fullName>
        <formula>ESC_Case__r.ESC_UPD_Resolver__c</formula>
        <label>ESC UPD Resolver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_With_Development_Timestamp__c</fullName>
        <description>ESC_ The date time when the record was set to a status of With Development.</description>
        <label>With Development Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Form_Referral_Response_Time__c</fullName>
        <description>Internal field to calculate a stamp the From Referral Milestone Time</description>
        <label>Referral SLA Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GGO_Referral_Owner_Email__c</fullName>
        <description>NOT USED</description>
        <label>Referral Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GGO_Referral_Owner_Mgr_Email__c</fullName>
        <description>NOT USED</description>
        <label>Referral Owner Mgr Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Language__c</fullName>
        <formula>Owner:User.Language__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Owner_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Owner Mgr</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_RTI__c</fullName>
        <formula>IF(ISBLANK(Form_Referral_Response_Time__c),IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;Red&quot;, 20,40), IF (Form_Referral_Response_Time__c&lt; NOW(),IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;Red&quot;,20,40), IF((Form_Referral_Response_Time__c - NOW())*1440 &lt;10,IMAGE(&quot;/img/samples/light_yellow.gif&quot;,&quot;Yellow&quot;,20,40),IMAGE(&quot;/img/samples/light_green.gif&quot;,&quot;Green&quot;, 20,40))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Indicator/SLA</label>
        <type>Text</type>
    </fields>
    <label>Referral/Escalation</label>
    <listViews>
        <fullName>AR_Bejerman_Production_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_Bejerman_Production</label>
        <queue>AR_Bejerman_Production</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Billing_Invoices_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_Billing_Invoices</label>
        <queue>AR_Billing_Invoices</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Customization_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_Customization</label>
        <queue>AR_Customization</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Implementation_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_Implementation</label>
        <queue>AR_Implementation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Incidents_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_Incidents</label>
        <queue>AR_Incidents</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Logistics_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_Logistics</label>
        <queue>AR_Logistics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_SoftDev_Analistas_otros_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_SoftDev - Analistas/otros</label>
        <queue>AR_SoftDev_Analistas_otros</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_SoftDev_OnBalance_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_SoftDev - OnBalance</label>
        <queue>AR_SoftDev_OnBalance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_SoftDev_Onvio_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_SoftDev - Onvio</label>
        <queue>AR_SoftDev_Onvio</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_SoftDev_Onvio_Global_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_SoftDev - Onvio Global</label>
        <queue>AR_SoftDev_Onvio_Global</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_SoftDev_SaaS_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_SoftDev - SaaS</label>
        <queue>AR_SoftDev_SaaS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_SoftDev_eFlex_OnPremise_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_SoftDev - eFlex/OnPremise</label>
        <queue>AR_SoftDev_eFlex_OnPremise</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Support_Customer_Return_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_Support_ Customer Return</label>
        <queue>AR_Support_Customer_Return</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Support_HighQ_Level_2_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_Support_HighQ_Level_2</label>
        <queue>AR_Support_HighQ_Level_2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Support_HighQ_N3_ESC_Case_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>AR_Support_HighQ_N3</label>
        <queue>AR_Support_HighQ_N3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Referral ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals/Escalations</pluralLabel>
    <recordTypes>
        <fullName>ESC_Service_Cloud_Referral</fullName>
        <active>true</active>
        <description>ESC_ Used for Accountable Resolver and Case Collaborator referrals</description>
        <label>Service Cloud Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escalations</fullName>
        <active>true</active>
        <description>ESC_ Used for the escalation record type of referrals</description>
        <label>Escalations</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Escalate_to_queue</fullName>
        <active>true</active>
        <description>Escalating a case to Queue or changing the ownership to a queue is not possible.</description>
        <errorConditionFormula>AND(LEFT(OwnerId,3) = &quot;00G&quot;,OR($Profile.Name  =&apos;GLI Accountable Resolver Agent&apos;, $Profile.Name  =&apos;GLI Helpdesk Agent&apos; ,$Profile.Name  =&apos;GLI Helpdesk Manager&apos;) ,ISPICKVAL(ESC_Role__c,&apos;Escalation&apos;))</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>The case Escalation Cannot be assigned to the Queue. Please select a User.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ESC_NewStatuscannotbesetbackValidation</fullName>
        <active>true</active>
        <description>Once a referral is accepted/rejected cannot be set back to New</description>
        <errorConditionFormula>(ISPICKVAL(ESC_Referral_Status__c,&apos;&apos;) || ISPICKVAL(ESC_Referral_Status__c,&apos;New&apos;)) &amp;&amp; !ISPICKVAL(PRIORVALUE(ESC_Referral_Status__c),&apos;New&apos;)</errorConditionFormula>
        <errorMessage>Status cannot be set back to New/Blank Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ESC_Rejection_Reason_Required</fullName>
        <active>true</active>
        <description>Requires that rejection reason be populated if status = rejected</description>
        <errorConditionFormula>AND ( ISPICKVAL(ESC_Referral_Status__c, &quot;Rejected&quot;),  ISBLANK (ESC_Rejection_Cancellation_Reason__c ))</errorConditionFormula>
        <errorMessage>When selecting a status as Rejected, please populate the Rejection / Cancellation Reason field</errorMessage>
    </validationRules>
</CustomObject>